feat(entities): implement JPA entities for all 23 database tables
- Created 3 base entity classes (BaseEntity, TenantAwareEntity, SoftDeletableEntity)
- Implemented 19 enum classes matching database ENUM types
- Created 23 JPA entities with proper mappings:
  * Foundation entities: Tenant, User, Role, Permission, AuditLog
  * Identity & Access: Session
  * Patient Care: Patient, Appointment, MedicalRecord, Prescription, PrescriptionItem, LabTest, LabResult, Vital, Diagnosis, Billing
  * Operations: Inventory, InventoryTransaction, StaffSchedule, Notification, ConsentRecord, PatientDocument
- Added Jakarta Bean Validation annotations on all fields
- Implemented helper methods and state machine transitions
- Added Hypersistence Utils dependency for JSONB and PostgreSQL array support
- Updated .gitignore to exclude personal CLAUDE.md file
- Fixed UUID generation for Hibernate 6 compatibility
- All entities compiled successfully with proper JPA mappings verified

--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,9 @@ jacoco.exec
 *.jks
 secrets/
 credentials.json
+
+# ============================================================================
+# Personal/Local Files
+# ============================================================================
+# Claude Code instructions (personal use only)
+CLAUDE.md
