--- a/clinic-backend/src/main/resources/application.yml
+++ b/clinic-backend/src/main/resources/application.yml
@@ -44,7 +44,7 @@ spring:
       host: ${REDIS_HOST:localhost}
       port: ${REDIS_PORT:6379}
       password: ${REDIS_PASSWORD:}
-      timeout: 60000
+      timeout: 2000ms
       lettuce:
         pool:
           max-active: 8
@@ -59,9 +59,6 @@ spring:
 
   cache:
     type: redis
-    redis:
-      time-to-live: 3600000
-      cache-null-values: false
 
   servlet:
     multipart:
